--- a/pommerman_config.yaml
+++ b/pommerman_config.yaml
@@ -6,30 +6,31 @@ behaviors:
     
     # 2. Ustawienia specyficzne dla trenera PPO
     hyperparameters:
-      batch_size: 1024
-      buffer_size: 10240
+      batch_size: 2048
+      buffer_size: 20480
       learning_rate: 3.0e-4
       beta: 5.0e-3
-      epsilon: 0.2
+      epsilon: 0.15
       lambd: 0.95
-      num_epoch: 3
+      num_epoch: 5
     
     # 3. Ustawienia Generalne
-    max_steps: 100000
-    time_horizon: 256
-    summary_freq: 10000
+    max_steps: 10000000
+    time_horizon: 1000
+    summary_freq: 5000
     
     # 4. Ustawienia Sieci
     network_settings:
+      normalize: true
       hidden_units: 128
       num_layers: 2
       
     # 5. Ustawienia Nagrod
     reward_signals:
       extrinsic:
-        gamma: 0.99
+        gamma: 0.999
         strength: 1.0
-        
+    
     # 6. Ustawienia Treningu
     threaded: True
     # init_path: None
